# MEF

./: ERD.drawio  Makefile  README.md  pyproject.toml
app/: alembic.ini  main.py
app/alembic/: env.py
app/alembic/versions/: 5cef48b20377_migrations.py
app/core/: database.py  settings.py
app/core/dependencies/: auth_dependencies.py  perm_dependencies.py
app/models/medias/: associations.py  crud.py  enums_type.py  host.py  schema.py
app/models/medias/animes/alternative_titles/: alternative_titles.py  crud.py  schema.py
app/models/medias/animes/anime/: anime.py  crud.py  (+1 more)
app/models/medias/country/: country.py  schema.py
app/models/medias/enums/: crud.py  enums.py  schema.py
app/models/medias/language/: language.py  schema.py
app/models/medias/star/: schema.py  star.py
app/models/users/: associations.py  crud.py  schema.py  user.py
app/routers/: anime.py  movies.py  series.py  users.py
scripts/: animelist_str_to_json.py  animelistapi.py  test.py  test2.py
scripts/data/: temp data.txt
scripts/data/1MDB/Movies/: 1MDB_Movie.json  1MDB_Movie.xlsx  temp.json
scripts/data/1MDB/Series/: 1MDB_Kdrama.json  1MDB_Kdrama.xlsx  1MDB_Series.json  temp.json
scripts/data/MyAnimeList/: MyAnimeList.csv  MyAnimeList.json  TopMyAnimeList.json  temp.json
scripts/data/MyAnimeListB2/: MyAnimeList.json  ReMyAnimeList.json
scripts/data/MyAnimeListB3/: MyAnimeList.json  MyAnimeList2.json  ReMyAnimeList.json  ReMyAnimeList2.json
scripts/initiateDB/: User.sql
scripts/initiateDB/1MDB/Movies/: 1MDB_Movie.json
scripts/initiateDB/MyAnimeList/: ReMyAnimeList.json
(+30 files in other folders)
