[tool.poetry]
name = "mef"
version = "0.1.0"
description = ""
authors = ["FazreilieAlep <mrparksaereilee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.2"
db-sqlite3 = "^0.0.1"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
alembic-utils = "^0.8.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
